live streaming and event agenda update

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                             <div class="grid grid--padded">
                                 <div class="grid__item grid__item--12-cols grid__item--8-cols--gt-md">
                                     <div class="grid grid--padded">
-                                        Take a look at the agenda for Google I/O extended 2017 Sri Lanka
+                                        Take a look at the agenda for Google I/O extended 2017 Sri Lanka (Hall A)
                                     <br/>
                                         
                                     </div>
@@ -462,142 +462,181 @@
                                 <tr>
                                 <th class="mdl-data-table__cell--non-numeric">Time</th>
                                 <th class="mdl-data-table__cell--non-numeric">Session</th>
+                                    <th class="mdl-data-table__cell--non-numeric">Speaker</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                 <td class="mdl-data-table__cell--non-numeric">5 PM - 6.45 PM </td>
                                 <td class="mdl-data-table__cell--non-numeric">Registration (Developers / Enterprises)</td>
+                                    <td class="mdl-data-table__cell--non-numeric">   </td>
                                 </tr>
 
                                 <tr>
                                 <td class="mdl-data-table__cell--non-numeric">6.50 PM - 7 PM  </td>
                                 <td class="mdl-data-table__cell--non-numeric">Event Opening</td>
+                                    <td class="mdl-data-table__cell--non-numeric">   </td>
                                 </tr>
 
                                 <tr>
                                 <td class="mdl-data-table__cell--non-numeric">7 PM - 7.15 PM </td>
                                 <td class="mdl-data-table__cell--non-numeric">Keynote by Dialog and Google</td>
+                                    <td class="mdl-data-table__cell--non-numeric">Fariq Cader & Prash Balakirshnan</td>
                                 </tr>
 
                                 <tr>
                                 <td class="mdl-data-table__cell--non-numeric">7.15 PM - 7.45 PM</td>
                                 <td class="mdl-data-table__cell--non-numeric">GDG Sri Lanka, Google and you</td>
+                                    <td class="mdl-data-table__cell--non-numeric">Tharaka Devinda,Michela Thalagala & Roshanth Gardiarachchi</td>
                                 </tr>
 
                                 <tr>
                                 <td class="mdl-data-table__cell--non-numeric">7.45 PM - 8.25 PM</td>
                                 <td class="mdl-data-table__cell--non-numeric">Ballerina by WSO2</td>
+                                    <td class="mdl-data-table__cell--non-numeric">Dr.Sanjiva Weerawarana & Sameera Jayasoma  </td>
                                 </tr>
 
                                 <tr>
                                 <td class="mdl-data-table__cell--non-numeric">8.25 PM - 8.30 PM 	</td>
                                 <td class="mdl-data-table__cell--non-numeric">Enternainment Segment</td>
+                                    <td class="mdl-data-table__cell--non-numeric"> Janai Priyai  </td>
                                 </tr>
 
                                 <tr>
                                 <td class="mdl-data-table__cell--non-numeric">8.30 PM - 8.45 PM </td>
                                 <td class="mdl-data-table__cell--non-numeric">Dinner starts</td>
+                                    <td class="mdl-data-table__cell--non-numeric">   </td>
                                 </tr>
 
                                 <tr>
-                                <td class="mdl-data-table__cell--non-numeric">8.45 PM - 9.15 PM </td>
-                                <td class="mdl-data-table__cell--non-numeric">Tech Session</td>
+                                <td class="mdl-data-table__cell--non-numeric">8.45 PM - 9.05 PM </td>
+                                <td class="mdl-data-table__cell--non-numeric">Arimac Story</td>
+                                    <td class="mdl-data-table__cell--non-numeric"> Chamira Jayasinghe  </td>
                                 </tr>
 
                                 <tr>
-                                <td class="mdl-data-table__cell--non-numeric">9.15 PM - 9.45 PM </td>
-                                <td class="mdl-data-table__cell--non-numeric">Dialog IoT </td>
+                                <td class="mdl-data-table__cell--non-numeric">9.05 PM - 9.25 PM </td>
+                                <td class="mdl-data-table__cell--non-numeric">GSMA Startup Ecosystem Accelerator Program </td>
+                                    <td class="mdl-data-table__cell--non-numeric"> Maxime Bayen  </td>
                                 </tr>
 
                                 <tr>
-                                <td class="mdl-data-table__cell--non-numeric">9.50 PM - 9.55 PM  </td>
-                                <td class="mdl-data-table__cell--non-numeric">Entertainment Session</td>
+                                <td class="mdl-data-table__cell--non-numeric">9.25 PM - 9.45 PM  </td>
+                                <td class="mdl-data-table__cell--non-numeric">A Good Way to Stay Connected </td>
+                                    <td class="mdl-data-table__cell--non-numeric"> Shafraz Rahim </td>
                                 </tr>
 
                                 <tr>
-                                <td class="mdl-data-table__cell--non-numeric">10 PM - Midnight</td>
-                                <td class="mdl-data-table__cell--non-numeric">Livestream - Google IO keynote</td>
+                                <td class="mdl-data-table__cell--non-numeric">9.50 PM - 9.55 PM</td>
+                                <td class="mdl-data-table__cell--non-numeric">Enternainment Segment</td>
+                                    <td class="mdl-data-table__cell--non-numeric"> Podda </td>
                                 </tr>
 
                                 <tr>
-                                <td class="mdl-data-table__cell--non-numeric">12.00 AM - 12.15 AM  </td>
-                                <td class="mdl-data-table__cell--non-numeric">Entertainment Segment and Prize Giving of Bot Challenge Winners</td>
+                                <td class="mdl-data-table__cell--non-numeric">10 PM - Midnight   </td>
+                                <td class="mdl-data-table__cell--non-numeric">Keynote</td>
+                                    <td class="mdl-data-table__cell--non-numeric"><mark>Live Streaming</mark></td>
+                                </tr>
+                                <tr>
+                                    <td class="mdl-data-table__cell--non-numeric">12.00 AM - 12.15 AM </td>
+                                    <td class="mdl-data-table__cell--non-numeric">Enternainment Segment</td>
+                                    <td class="mdl-data-table__cell--non-numeric">Iraj</td>
                                 </tr>
 
                                 <tr>
                                 <td class="mdl-data-table__cell--non-numeric">12.15 AM - 12.45 AM </td>
                                 <td class="mdl-data-table__cell--non-numeric">Google Cloud Platform</td>
+                                    <td class="mdl-data-table__cell--non-numeric">Mika Igarashi</td>
                                 </tr>
 
                                 <tr>
                                 <td class="mdl-data-table__cell--non-numeric">12.45 AM - 1.15 AM </td>
                                 <td class="mdl-data-table__cell--non-numeric">ideamart Gone Global</td>
+                                    <td class="mdl-data-table__cell--non-numeric">Kasun Withanarachchi </td>
                                 </tr>
 
                                 <tr>
                                 <td class="mdl-data-table__cell--non-numeric">1.15 AM - 1.45 AM</td>
-                                <td class="mdl-data-table__cell--non-numeric">	Arimac Story</td>
+                                <td class="mdl-data-table__cell--non-numeric">	Do or Die</td>
+                                    <td class="mdl-data-table__cell--non-numeric">	Malinda Prasad</td>
                                 </tr>
 
                                 <tr>
                                 <td class="mdl-data-table__cell--non-numeric">1.45 AM - 2 AM  </td>
                                 <td class="mdl-data-table__cell--non-numeric">Entertainment Segment</td>
+                                    <td class="mdl-data-table__cell--non-numeric"> Akunu </td>
                                 </tr>
 
                                 <tr>
                                 <td class="mdl-data-table__cell--non-numeric">2 AM - 2.20 AM </td>
                                 <td class="mdl-data-table__cell--non-numeric">Product Launches </td>
+                                    <td class="mdl-data-table__cell--non-numeric"> </td>
                                 </tr>
 
                                 <tr>
                                 <td class="mdl-data-table__cell--non-numeric">2.20 AM - 2.50 AM</td>
-                                <td class="mdl-data-table__cell--non-numeric">Cake Labs Presentation </td>
+                                <td class="mdl-data-table__cell--non-numeric">Real World Fullstack Engineering </td>
+                                    <td class="mdl-data-table__cell--non-numeric">Hasitha Liyanage</td>
                                 </tr>
 
                                 <tr>
                                 <td class="mdl-data-table__cell--non-numeric">2.50 AM - 3.10 AM</td>
                                 <td class="mdl-data-table__cell--non-numeric">SLASSCOM Speech</td>
+                                    <td class="mdl-data-table__cell--non-numeric">Shevan Goonethilake</td>
                                 </tr>
 
                                 <tr>
                                 <td class="mdl-data-table__cell--non-numeric">3.10 AM Onwards </td>
                                 <td class="mdl-data-table__cell--non-numeric">Snacks will be served</td>
+                                    <td class="mdl-data-table__cell--non-numeric"></td>
+                                </tr>
+
+                                <tr>
+                                    <td class="mdl-data-table__cell--non-numeric">3.10 AM - 3.15 AM </td>
+                                    <td class="mdl-data-table__cell--non-numeric">Entertainment Segment</td>
+                                    <td class="mdl-data-table__cell--non-numeric"></td>
                                 </tr>
 
                                 <tr>
                                 <td class="mdl-data-table__cell--non-numeric">3.10 AM - 3.30 AM </td>
-                                <td class="mdl-data-table__cell--non-numeric">GBG Speech </td>
+                                <td class="mdl-data-table__cell--non-numeric">Getting in with Google for your Startup</td>
+                                    <td class="mdl-data-table__cell--non-numeric">Sajini Jayawardena </td>
                                 </tr>
 
                                 <tr>
-                                <td class="mdl-data-table__cell--non-numeric">3.30 AM - 3.45 AM </td>
-                                <td class="mdl-data-table__cell--non-numeric">Entertainment Segment</td>
+                                <td class="mdl-data-table__cell--non-numeric">3.30 AM - 3.50 AM </td>
+                                <td class="mdl-data-table__cell--non-numeric">PickMe</td>
+                                    <td class="mdl-data-table__cell--non-numeric">Zulfers </td>
                                 </tr>
 
                                 <tr>
-                                <td class="mdl-data-table__cell--non-numeric">3.45 AM - 4.10 AM  </td>
+                                <td class="mdl-data-table__cell--non-numeric">3.50 AM - 4.15 AM  </td>
                                 <td class="mdl-data-table__cell--non-numeric">Speech by Bhasha</td>
+                                    <td class="mdl-data-table__cell--non-numeric">Dhanika Perera </td>
                                 </tr>
 
                                 <tr>
-                                <td class="mdl-data-table__cell--non-numeric">4.10 AM - 4.30 AM </td>
+                                <td class="mdl-data-table__cell--non-numeric">4.15 AM - 4.35 AM </td>
                                 <td class="mdl-data-table__cell--non-numeric">Speech by HypeHash</td>
+                                    <td class="mdl-data-table__cell--non-numeric"></td>
                                 </tr>
 
                                 <tr>
-                                <td class="mdl-data-table__cell--non-numeric">4.30 AM - 5 AM </td>
-                                <td class="mdl-data-table__cell--non-numeric">Tech session</td>
+                                <td class="mdl-data-table__cell--non-numeric">4.35 AM - 5.05 AM </td>
+                                <td class="mdl-data-table__cell--non-numeric">TensorFlow</td>
+                                    <td class="mdl-data-table__cell--non-numeric">Raveen Harith</td>
                                 </tr>
 
                                 <tr>
-                                <td class="mdl-data-table__cell--non-numeric">5.00 AM - 5.05 AM </td>
+                                <td class="mdl-data-table__cell--non-numeric">5.05 AM - 5.10 AM </td>
                                 <td class="mdl-data-table__cell--non-numeric">Vote of Thanks </td>
+                                    <td class="mdl-data-table__cell--non-numeric">Kasun Withanaarachchi</td>
                                 </tr>
 
                                 <tr>
-                                <td class="mdl-data-table__cell--non-numeric">5.05 AM </td>
+                                <td class="mdl-data-table__cell--non-numeric">5.10 AM </td>
                                 <td class="mdl-data-table__cell--non-numeric">Group Photograph</td>
+                                    <td class="mdl-data-table__cell--non-numeric"></td>
                                 </tr>
 
                         
@@ -606,6 +645,57 @@
                         </table>
                     </center>
                 </div>
+
+
+                </br>
+                <div class="grid grid--padded grid--align-center">
+                    Take a look at live Streaming Area ( Hall B)
+                    <br/>
+                </div>
+                </br>
+                </br>
+                <div class="schedule">
+                    <center>
+                        <table class="mdl-data-table mdl-js-data-table" style="font-size:17px; margin-top:-10px;">
+                            <thead>
+                            <tr>
+                                <th class="mdl-data-table__cell--non-numeric">Time</th>
+                                <th class="mdl-data-table__cell--non-numeric">Session</th>
+                                <th class="mdl-data-table__cell--non-numeric">Speaker</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td class="mdl-data-table__cell--non-numeric">10 PM - Midnight   </td>
+                                <td class="mdl-data-table__cell--non-numeric">Keynote</td>
+                                <td class="mdl-data-table__cell--non-numeric"><mark>Live Streaming</mark></td>
+                            </tr>
+
+                            <tr>
+                                <td class="mdl-data-table__cell--non-numeric">1.30 AM - 2.30 AM </td>
+                                <td class="mdl-data-table__cell--non-numeric">Developer Keynote</td>
+                                <td class="mdl-data-table__cell--non-numeric"> <mark>Live Streaming</mark> </td>
+                            </tr>
+
+                            <tr>
+                                <td class="mdl-data-table__cell--non-numeric">2.30 AM - 3.30 AM </td>
+                                <td class="mdl-data-table__cell--non-numeric">What's New in Android</td>
+                                <td class="mdl-data-table__cell--non-numeric"> <mark>Live Streaming</mark>  </td>
+                            </tr>
+
+                            <tr>
+                                <td class="mdl-data-table__cell--non-numeric">3.30 AM - 4.30 AM </td>
+                                <td class="mdl-data-table__cell--non-numeric">What's new in Firebase</td>
+                                <td class="mdl-data-table__cell--non-numeric"> <mark>Live Streaming</mark> </td>
+                            </tr>
+
+                            </tbody>
+                        </table>
+                    </center>
+                </div>
+
+
+
 
                 <center>
                     <img src="img/wipe1.gif" style="height:100px; margin-top:20px;" />
