updated tech guru logo

--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
                                 </center>
                             </div>
                             <div class="mdl-cell mdl-cell--6-col mdl-cell--2-col-phone middle">
-                                    <img src="img/fm.jpg" style="height:70px; margin-top:-32px; float:left;" />
+                                    <img src="img/tech.png" style="height:50px; margin-top:-22px;float:left;" />
                             </div>
                         </div>
-                        <center><p class="title" style="margin-top:-30px;">Media Partner</p></center>
+                        <center><p class="title" style="margin-top:-21px;">Media Partner</p></center>
                     </div>
                     <div class="mdl-cell mdl-cell--4-col middle">
                         <center>
