--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-75655731-6', 'auto');
+        ga('send', 'pageview');
+    </script>
+
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -516,8 +526,8 @@
 
                                 <tr>
                                 <td class="mdl-data-table__cell--non-numeric">9.05 PM - 9.25 PM </td>
-                                <td class="mdl-data-table__cell--non-numeric">GSMA Startup Ecosystem Accelerator Program </td>
-                                    <td class="mdl-data-table__cell--non-numeric"> Maxime Bayen  </td>
+                                <td class="mdl-data-table__cell--non-numeric"></td>
+                                    <td class="mdl-data-table__cell--non-numeric">  </td>
                                 </tr>
 
                                 <tr>
@@ -760,17 +770,6 @@
     <script src="scripts/slash.js"></script>
     <script src="scripts/countdown.js"></script>
     <script src="scripts/main.js"></script>
-
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','httptarget="_blank" href="#ioshedule">Register Now</a>s://www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-75655731-6', 'auto');
-      ga('send', 'pageview');
-
-    </script>
 </div>
 </body>
 </html>
