updated tech guru logo

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                  <section class="section--center mdl-grid site-max-width middles" style=" z-index:2000;position: relative;">
                     <div class="mdl-cell mdl-cell--4-col middle">
                         <center>
-                            <img src="img/SLASSCOM-NEW.png" style="height:50px; margin-top:-12px;" />
+                            <img src="img/SLASSCOM-NEW.png" style="height:30px; margin-top:-12px;" />
                             <p>Strategic Partner</p>
                         </center>
                     </div>
@@ -145,18 +145,18 @@
                         <div class="mdl-grid">
                             <div class="mdl-cell mdl-cell--6-col mdl-cell--2-col-phone middle">
                                 <center>
-                                    <img src="img/tv.jpg" style="height:50px; margin-top:-22px; float:right;" />
+                                    <img src="img/tv.jpg" style="height:35px; margin-top:-22px; float:right;" />
                                 </center>
                             </div>
                             <div class="mdl-cell mdl-cell--6-col mdl-cell--2-col-phone middle">
-                                    <img src="img/tech.png" style="height:50px; margin-top:-22px;float:left;" />
+                                    <img src="img/tech.png" style="height:40px; margin-top:-22px;float:left;" />
                             </div>
                         </div>
-                        <center><p class="title" style="margin-top:-21px;">Media Partner</p></center>
+                        <center><p class="title" style="margin-top:-18px; text-align:center;">Media Partner</p></center>
                     </div>
                     <div class="mdl-cell mdl-cell--4-col middle">
                         <center>
-                            <img src="img/rsvp_logo.png" class="gdgl gdg2" style="height:35px;" />
+                            <img src="img/rsvp_logo.png" class="gdgl gdg2" style="height:25px;" />
                             <p class="title1">Registration Partner</p>
                         </center>
                     </div>
