--- a/index.html
+++ b/index.html
@@ -155,14 +155,14 @@
                         <div class="mdl-grid">
                             <div class="mdl-cell mdl-cell--6-col mdl-cell--2-col-phone middle">
                                 <center>
-                                    <img src="img/tv.jpg" style="height:35px; margin-top:-22px; float:right;" />
+                                    <img src="img/tv.jpg" style="height:35px; margin-top:-32px; margin-left:30px;" />
                                 </center>
                             </div>
                             <div class="mdl-cell mdl-cell--6-col mdl-cell--2-col-phone middle">
                                     <img src="img/tech.png" style="height:40px; margin-top:-22px;float:left;" />
                             </div>
                         </div>
-                        <center><p class="title" style="margin-top:-18px; text-align:center;">Media Partner</p></center>
+                        <center><p class="title" style="margin-top:-30px; text-align:center;">Media Partner</p></center>
                     </div>
                     <div class="mdl-cell mdl-cell--4-col middle">
                         <center>
