--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#6284F3">
     <title>Google I/O Extended 17</title>
     <link rel="icon" href="img/favicon/favicon.ico">
-    <meta name="description" content="Demo of Material design portfolio template by TemplateFlip.com."/>
+    <meta name="description" content="Official website for Google IO extended 2017 Sri Lanka powered by Dialog"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;amp;lang=en"
           rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
