youtube url change

--- a/index.html
+++ b/index.html
@@ -366,13 +366,13 @@
                             <div class="mdl-grid">
                                 <div class="mdl-cell mdl-cell--6-col">
                                     <center>
-                                        <img class="imgPlay2" src="img/covs.png" style="height:280px;" data-video="https://youtu.be/NKMKdt86l_w"/>
+                                        <img class="imgPlay2" src="img/covs.png" style="height:280px;" data-video="https://www.youtube.com/embed/NKMKdt86l_w"/>
                                         <p style="margin-top:5px;">Prash from GOOGLE</p>
                                     </center>
                                 </div>
                                 <div class="mdl-cell mdl-cell--6-col">
                                     <center>
-                                        <img class="imgPlay2" src="img/covs.png" style="height:280px;" data-video="https://youtu.be/hnsfHxEoU_k"/>
+                                        <img class="imgPlay2" src="img/covs.png" style="height:280px;" data-video="https://www.youtube.com/embed/hnsfHxEoU_k"/>
                                         <p style="margin-top:5px;">Dhanika from BHASHA</p>
                                     </center>
                                 </div>
@@ -381,13 +381,13 @@
                             <div class="mdl-grid">
                                 <div class="mdl-cell mdl-cell--6-col">
                                     <center>
-                                        <img class="imgPlay2" src="img/covs.png" style="height:280px;" data-video="https://youtu.be/ANx60amlO-4"/>
+                                        <img class="imgPlay2" src="img/covs.png" style="height:280px;" data-video="https://www.youtube.com/embed/ANx60amlO-4"/>
                                         <p style="margin-top:5px;">Chamira from ARIMAC</p>
                                     </center>
                                 </div>
                                 <div class="mdl-cell mdl-cell--6-col">
                                     <center>
-                                        <img class="imgPlay2" src="img/covs.png" style="height:280px;" data-video="https://youtu.be/QRfg47YMHJ0"/>
+                                        <img class="imgPlay2" src="img/covs.png" style="height:280px;" data-video="https://www.youtube.com/embed/QRfg47YMHJ0"/>
                                         <p style="margin-top:5px;">Shamil from 99X</p>
                                     </center>
                                 </div>
@@ -396,13 +396,13 @@
                             <div class="mdl-grid">
                                 <div class="mdl-cell mdl-cell--6-col">
                                     <center>
-                                        <img class="imgPlay2" src="img/covs.png" style="height:280px;" data-video="https://youtu.be/4eVvIPw9U24"/>
+                                        <img class="imgPlay2" src="img/covs.png" style="height:280px;" data-video="https://www.youtube.com/embed/4eVvIPw9U24"/>
                                         <p style="margin-top:5px;">Shafraz  from DIALOG</p>
                                     </center>
                                 </div>
                                 <div class="mdl-cell mdl-cell--6-col">
                                     <center>
-                                        <img class="imgPlay2" src="img/covs.png" style="height:280px;" data-video="https://youtu.be/NBvX7EA6eIE"/>
+                                        <img class="imgPlay2" src="img/covs.png" style="height:280px;" data-video="https://www.youtube.com/embed/NBvX7EA6eIE"/>
                                         <p style="margin-top:5px;">Sumedha from WSO2</p>
                                     </center>
                                 </div>
